# Gist

./: .gitignore  BENCHMARK.md  BENCHMARKS.md  LICENSE  PROJECT_STATUS.md  README.md
electron/: package-lock.json  package.json
electron/src/: main.js  preload.js
electron/src/renderer/: app.js  index.html  onboarding.js  styles.css
rust-backend/: Cargo.toml  queries.txt
rust-backend/src/: active_rag_agent.rs  config.rs  embedding.rs  file_watcher.rs  hnsw_index.rs  indexer.rs  lib.rs  main.rs  parsers.rs  query_parser.rs  search.rs  storage.rs
rust-backend/src/api/: active_rag.rs  ai.rs  files.rs  files_browser.rs  index.rs  mod.rs  parse.rs  preview.rs  search.rs  settings.rs  setup.rs  system_info.rs  test_image_embedding.rs  tree.rs
