[package]
name = "nlp-file-explorer-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.30", features = ["bundled"] }
bincode = "1.3"
walkdir = "2.4"
notify = "6.1"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
pdf-extract = "0.7"
docx-rs = "0.4.18"
calamine = "0.24"
kdtree = "0.2"
dirs = "5.0"
num_cpus = "1.16"
sysinfo = "0.30"
winapi = { version = "0.3", features = ["sysinfoapi", "winnt"] }
hnsw = "0.11"
rand = "0.8"
chrono = "0.4"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
